# multi-ds-manager

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.example.yaml  docker-compose.yml
.github/workflows/: binary-artifacts.yml  ci.yml  docker-image.yml
deploy/compose/: prometheus.yml
deploy/k8s/: configmap.yaml  deployment.yaml  secret.example.yaml  service.yaml
docs/: deployment.md  observability.md  operations.md  perf-baseline.md
examples/java_client/: README.md  pom.xml
examples/java_client/src/main/java/com/example/multids/client/: ClientMain.java
examples/node_client/: README.md  client.js  package.json
examples/python_client/: README.md  client.py  requirements.txt
proto/: dynamic_ds.proto
scripts/: native_query_bridge.py
scripts/audit/: archive_audit.ps1  search_audit.ps1
scripts/smoke/: grpc_smoke.ps1
src/: audit.rs  auth.rs  config.rs  executor.rs  governance.rs  main.rs  manager.rs  models.rs  monitoring.rs  native_bridge.rs  resolver.rs
src/grpc/: mod.rs  server.rs
